syntax = "proto3";

package shortener;

option go_package = "github.com/serg2014/shortener/cmd/shortener/proto";

/*
#r.Get("/api/internal/stats", handlers.InternalStats(a))
#r.Post("/", handlers.CreateURL(a))
#r.Get("/{key}", handlers.GetURL(a))
#r.Post("/api/shorten", handlers.CreateURLJson(a))
#r.Get("/ping", handlers.Ping(a))
#r.Post("/api/shorten/batch", handlers.CreateURLBatch(a))
#r.Get("/api/user/urls", handlers.GetUserURLS(a))
#r.Delete("/api/user/urls", handlers.DeleteUserURLS(a))
*/

message InternalStatsRequest {}
message InternalStatsResponse {
    uint32 urls = 1;
    uint32 users = 2;
}
 
service ShortenerService {
  rpc InternalStats(InternalStatsRequest) returns (InternalStatsResponse);
}